--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
 cachetools==2.0.1
 certifi==2018.1.18
 chardet==3.0.4
-google-api-python-client==1.6.5
+google-api-python-client==1.6.6
 google-auth==1.4.1
 google-auth-httplib2==0.0.3
 google-auth-oauthlib==0.2.0
-httplib2==0.10.3
+httplib2==0.11.3
 idna==2.6
-oauth2client==3.0.0
-oauthlib==2.0.6
+oauth2client==4.1.2
+oauthlib==2.0.7
+pep8==1.7.1
+pkg-resources==0.0.0
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 requests==2.18.4
