--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip install pycodestyle  
 # command to run tests
 script:
   - python -m unittest discover tests
