--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ chardet==3.0.4
 click==6.7
 Flask==1.0.2
 get==1.0.2
+gunicorn==19.8.1
 httplib2==0.11.3
 idna==2.6
 itsdangerous==0.24
@@ -13,7 +14,7 @@ oauth2client==4.1.2
 oauthlib==2.0.7
 pep8==1.7.1
 post==1.0.1
-public==1.0.1
+public==1.0.2
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycodestyle==2.4.0
