--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,12 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
-  - pip install pycodestyle  
+  - pip install pycodestyle
 # command to run tests
 script:
   - python -m unittest discover tests
+deploy:
+  provider: heroku
+  api_key: $HEROKU_KEY
+  app:
+    master: youtube-data-monitor
