--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,6 @@ script:
 deploy:
   provider: heroku
   api_key: $HEROKU_KEY
-  app:
-    master: youtube-data-monitor
+  app: youtube-data-monitor
+    on:
+      all_branches: true
