--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2018.1.18
 chardet==3.0.4
 click==6.7
 Flask==1.0.2
+Flask-SQLAlchemy==2.3.2
 get==1.0.2
 gunicorn==19.8.1
 httplib2==0.11.3
@@ -15,6 +16,7 @@ oauthlib==2.0.7
 pep8==1.7.1
 post==1.0.1
 public==1.0.2
+psycopg2==2.7.4
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycodestyle==2.4.0
@@ -24,6 +26,7 @@ requests==2.18.4
 requests-oauthlib==0.8.0
 rsa==3.4.2
 six==1.11.0
+SQLAlchemy==1.2.7
 uritemplate==3.0.0
 urllib3==1.22
 Werkzeug==0.14.1
