setting travis configuration
Co-authored-by: Adamacenog <andre.garridod@gmail.com>
Co-authored-by: patrickvrb <patrickvrb@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: python
 python:
   - "3.5"
 # command to install dependencies
+env:
+    -DEBUG=True DATABASE_URL="postgres:trisha@localhost/youtube_database"
+before_script:
+  - psql -c 'create database youtube_database;' -U postgres
 install:
   - pip install -r requirements.txt
   - pip install pycodestyle
